testing bi pedal walker

--- a/Policy-Based Methods/Deep Deterministic Policy Gradient (DDPG) Algorithm/Deep Deterministic Policy Gradient.ipynb
+++ b/Policy-Based Methods/Deep Deterministic Policy Gradient (DDPG) Algorithm/Deep Deterministic Policy Gradient.ipynb
@@ -46,17 +46,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Action Size: 1\n",
-      "Action High: [2.]\n",
-      "Action Low: [-2.]\n",
-      "State Size: 3\n",
-      "State High: [1. 1. 8.]\n",
-      "State Low: [-1. -1. -8.]\n"
+      "Action Size: 4\n",
+      "Action High: [1. 1. 1. 1.]\n",
+      "Action Low: [-1. -1. -1. -1.]\n",
+      "State Size: 24\n",
+      "State High: [inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf\n",
+      " inf inf inf inf inf inf]\n",
+      "State Low: [-inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf\n",
+      " -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ad55a\\anaconda3\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     }
    ],
    "source": [
-    "env = gym.make('Pendulum-v0')\n",
+    "env = gym.make('BipedalWalker-v3')\n",
     "env.seed(10)\n",
     "action_size = env.action_space.shape[0]\n",
     "state_size = env.observation_space.shape[0]\n",
@@ -95,7 +105,7 @@
    "source": [
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "def ddpg(n_episodes=1000, max_t=300):\n",
+    "def ddpg(n_episodes=10000, max_t=700):\n",
     "    \n",
     "    scores_deque = deque(maxlen=100)\n",
     "    scores = []\n",
@@ -132,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "696fa90b77384409bf13ef8245cef86c",
+       "model_id": "aa2d876a1c744036b740ff516b963bb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,22 +163,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 100\tAverage Score: -1171.48\tScore: -1115.33\n",
-      "Episode 200\tAverage Score: -793.18\tScore: -373.8936\n",
-      "Episode 300\tAverage Score: -856.03\tScore: -883.112\n",
-      "Episode 400\tAverage Score: -876.07\tScore: -1097.53\n",
-      "Episode 500\tAverage Score: -870.61\tScore: -636.715\n",
-      "Episode 600\tAverage Score: -621.99\tScore: -1733.04\n",
-      "Episode 700\tAverage Score: -712.66\tScore: -620.741\n",
-      "Episode 800\tAverage Score: -544.38\tScore: -129.196\n",
-      "Episode 900\tAverage Score: -552.11\tScore: -851.902\n",
-      "Episode 1000\tAverage Score: -515.14\tScore: -485.09\n",
-      "Episode 1100\tAverage Score: -417.48\tScore: -376.68\n",
-      "Episode 1200\tAverage Score: -509.46\tScore: -621.545\n",
-      "Episode 1300\tAverage Score: -613.42\tScore: -4.7617\n",
-      "Episode 1400\tAverage Score: -430.39\tScore: -123.055\n",
-      "Episode 1500\tAverage Score: -405.73\tScore: -367.202\n",
-      "Episode 1558\tAverage Score: -523.09\tScore: -230.867"
+      "Episode 13\tAverage Score: -71.60\tScore: -15.855"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-70e2a5b2c3cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mddpg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m111\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-4-b1a95a6ce848>\u001b[0m in \u001b[0;36mddpg\u001b[1;34m(n_episodes, max_t)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m             \u001b[0maction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\GitHub\\Reinforcement-Learning-Study\\Policy-Based Methods\\Deep Deterministic Policy Gradient (DDPG) Algorithm\\DDPG_Agent.py\u001b[0m in \u001b[0;36mact\u001b[1;34m(self, state, add_noise)\u001b[0m\n\u001b[0;32m     60\u001b[0m         \u001b[1;34m\"\"\"Returns actions for given state as per current policy.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m         \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactor_local\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Evaluation Mode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -194,26 +202,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-154.708445605632\n"
+     ]
+    }
+   ],
    "source": [
     "agent.actor_local.load_state_dict(torch.load('checkpoint_actor.pth'))\n",
     "agent.critic_local.load_state_dict(torch.load('checkpoint_critic.pth'))\n",
     "\n",
     "state = env.reset()\n",
-    "agent.reset()   \n",
+    "agent.reset()\n",
+    "score = []\n",
+    "\n",
     "while True:\n",
     "    action = agent.act(state)\n",
     "    env.render()\n",
     "    next_state, reward, done, _ = env.step(action)\n",
+    "    score.append(reward)\n",
     "    state = next_state\n",
     "    if done:\n",
     "        break\n",
-    "print(reward)\n",
-    "        \n",
+    "\n",
+    "print(np.sum(score))        \n",
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
